Fix Hero margin gap on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -73,7 +73,7 @@ section.hero {
     aspect-ratio: 1 / 1;
     object-fit: cover;
     margin: 0 auto;
-    margin-bottom: 25px;
+    margin-bottom: var(--title-space);
     max-width: 500px;
     display: none;
     box-shadow: 0 0 30px var(--box-shadow-color);
